fixed word wrapping

--- a/themes/Spirit/static/less/navbar.less
+++ b/themes/Spirit/static/less/navbar.less
@@ -1,8 +1,5 @@
 @import "variables.less";
-.navbar-title{
-    color:@lightgrey;
-    font-size: 120%;
-}
+
 .navbar-flex-group{
     display:flex;
     background-color:@orange;
@@ -87,6 +84,7 @@
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    box-shadow: 0 20px 16px 0 rgba(0,0,0,0.2);
 }
 
 /* The navigation menu links */
